--- a/references.bib
+++ b/references.bib
@@ -3280,3 +3280,26 @@
 	url = {https://www.nzip.cz/data/2060-dlouhodoba-psychiatricka-pece},
 	issn = {2695-0340}
 }
+
+@article{dalal1989,
+  title={Risk analysis of the space shuttle: Pre-Challenger prediction of failure},
+  author={Dalal, Siddhartha R and Fowlkes, Edward B and Hoadley, Bruce},
+  journal={Journal of the American Statistical Association},
+  volume={84},
+  number={408},
+  pages={945--957},
+  year={1989},
+  publisher={Taylor \& Francis}
+}
+
+@article{mcdonald1990,
+  title={Painting multiple views of complex objects},
+  author={McDonald, John Alan and Stuetzle, Werner and Buja, Andreas},
+  journal={ACM SIGPLAN Notices},
+  volume={25},
+  number={10},
+  pages={245--257},
+  year={1990},
+  publisher={ACM New York, NY, USA}
+}
+
